@@ -1,6 +1,16 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002002
+ [Added / runtime recommends]
+ - Moose 2.000
+ - Path::Tiny 0.058
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 7.04 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 7.04 → 7.00
+ - Test::More 1.001009 → 0.99
 
 0.002001 2014-12-14T07:19:50Z
  [Added / test recommends]
@@ -16,4 +26,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.002000 2014-09-02T08:08:38Z
 
 0.001001 2014-08-15T21:16:43Z
-
