@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Plugin-INI-Baked
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002001, see misc/*.deps* for details
+ - configure: (recommends: ↓1)
+ - develop: +8 ↑4 -1 (recommends: ↓1, suggests: ↑2)
+ - runtime: (recommends: +2)
+ - test: ↓1 (recommends: ↓2)
 
 0.002001 2014-12-14T07:19:50Z a292fd7
  [Bugfix]
@@ -47,4 +55,3 @@ Release history for Dist-Zilla-Plugin-INI-Baked
 
 0.001000 2014-08-03T06:41:00Z
  - First version.
-
